--- a/karry_frontend/package.json
+++ b/karry_frontend/package.json
@@ -11,9 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.1",
+    "axios": "^1.8.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
