--- a/karry_backend/build.gradle
+++ b/karry_backend/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	// implementation 'javax.validation:validation-api:2.0.1.Final'
+	// implementation 'com.auth0:java-jwt:3.14.0'
 }
 
 tasks.named('test') {
