--- a/karry_frontend/package.json
+++ b/karry_frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.1",
+    "flowbite": "^3.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
