--- a/karry_backend/build.gradle
+++ b/karry_backend/build.gradle
@@ -35,8 +35,15 @@ dependencies {
 	// implementation 'org.springframework.boot:spring-boot-starter-security'
 	// implementation 'javax.validation:validation-api:2.0.1.Final'
 	// implementation 'com.auth0:java-jwt:3.14.0'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1" // ✅ Spring Cloud BOM 추가
+	}
 }
